added side bar tools, still incomplete

--- a/index.html
+++ b/index.html
@@ -8,7 +8,37 @@
     <script type="module" src="/main.js" defer></script>
   </head>
   <body>
-    <div id="app">
+    <div id="side-bar">
+      <ul>
+        <!-- <li>📄</li> -->
+        <!-- <li>⚙</li> -->
+        <!-- <li>📕</li> -->
+        <!-- <li>🛠</li> -->
+        <!-- <li>💾</li> -->
+        <!-- <li>🧱</li> -->
+        <li><img data-clickable="file" src="https://www.svgrepo.com/show/491021/file-generic.svg" alt="file img"></li>
+        <li><img data-clickable="gear" src="https://www.svgrepo.com/show/473209/gear.svg" alt="gear img"></li>
+        <li><img data-clickable="book" src="https://www.svgrepo.com/show/447570/book.svg" alt="book img"></li>
+        <li><img data-clickable="tools" src="https://www.svgrepo.com/show/485927/tools.svg" alt="tools img"></li>
+        <li><img data-clickable="save" src="https://www.svgrepo.com/show/488363/save.svg" alt="save img"></li>
+        <li><img data-clickable="brick" src="https://www.svgrepo.com/show/428405/brick-wall.svg" alt="brick img"></li>
+      </ul>
+      <!-- <ul>
+        <li>Files 📄</li>
+        <li>Config ⚙</li>
+        <li>Packages 📕</li>
+        <li>Editor 🛠</li>
+        <li>Save 💾</li>
+        <li>Others 🧱</li>
+      </ul> -->
+      <!-- <p>Files 📄</p>
+      <p>Config ⚙</p>
+      <p>Packages 📕</p>
+      <p>Editor 🛠</p>
+      <p>Save 💾</p>
+      <p>Others 🧱</p> -->
+    </div>
+    <div id="editor">
       <div id="html" class="content"></div>
       <div id="js" class="content"></div>
       <div id="css" class="content"></div>
